--- a/.env
+++ b/.env
@@ -1,18 +1,3 @@
-# In all environments, the following files are loaded if they exist,
-# the latter taking precedence over the former:
-#
-#  * .env                contains default values for the environment variables needed by the app
-#  * .env.local          uncommitted file with local overrides
-#  * .env.$APP_ENV       committed environment-specific defaults
-#  * .env.$APP_ENV.local uncommitted environment-specific overrides
-#
-# Real environment variables win over .env files.
-#
-# DO NOT DEFINE PRODUCTION SECRETS IN THIS FILE NOR IN ANY OTHER COMMITTED FILES.
-#
-# Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
-# https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
-
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=2e272af0f0eab1b825266d097afd682f
@@ -25,10 +10,12 @@ APP_SECRET=2e272af0f0eab1b825266d097afd682f
 ###< symfony/mailer ###
 
 ###> doctrine/doctrine-bundle ###
-# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
-# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-#
-# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
-# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7"
-DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=13&charset=utf8"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/asuwishnotion?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
+
+###> notion/secret ###
+API_KEY=secret_sjkgYFTAL5wXUqWpFmNnCYO4Bofst4FGTJa3FzStvnm
+API_DATABASE_ID=9a3e5755-6b4f-4e71-8535-82ccee19dec0
+API_VERSION=2021-05-13
+API_URL=https://api.notion.com/v1
+###< notion/secret ###
