Add: first modification admin

--- a/.env
+++ b/.env
@@ -14,8 +14,14 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/asuwishnotion?serverVersion=5.7"
 ###< doctrine/doctrine-bundle ###
 
 ###> notion/secret ###
-API_KEY=secret_sjkgYFTAL5wXUqWpFmNnCYO4Bofst4FGTJa3FzStvnm
-API_DATABASE_ID=9a3e5755-6b4f-4e71-8535-82ccee19dec0
+API_KEY=secret_z9QZNOiLLuGUq0XRzlLVf4dnSL4kZjScq9a3ES4F6EE
+API_DATABASE_ID=2062a452-e2fe-4e51-8687-b7b97e100765
 API_VERSION=2021-05-13
 API_URL=https://api.notion.com/v1
 ###< notion/secret ###
+
+###> mailjet/api ###
+API_KEY_MAILJET=139f2e1eb21820aa1202bb256a848d53
+API_SECRET_MAILJET=681566ecd17718abf2a2fcffb78d8824
+TEMPLATE_ID_MAILJET=3280561
+###< mailjet/api ###
